# proteus-player

./: .eslintrc.cjs  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  cliff.toml  eslint.config.mjs  index.html  package.json  packager.toml  tsconfig.json
.github/workflows/: release.yml
.zed/: settings.json
assets/app-icon/: icon.icns
scripts/: bump-version.ts
src/: App.vue  main.rs  main.ts  native_menu.rs  playback.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/src/: file.rs  main.rs  menu.rs  state.rs  window.rs
src/app/: effects.rs  helpers.rs  icons.rs  memory.rs  messages.rs  mod.rs  recent_files_store.rs  state.rs  styles.rs  view.rs  widgets.rs
src/assets/: fonts.css
src/components/: Greet.vue
src/components/Icons/: IconPause.vue  IconRefresh.vue  IconVolume0.vue  IconVolume1.vue  IconVolume2.vue  IconVolume3.vue  Play.vue  Reset.vue  Shuffle.vue  Volume0.vue  Volume1.vue  Volume2.vue  Volume3.vue
src/types/: track.ts
src/utils/: menu.ts
