[package]
name = "proteus-player"
version = "0.5.0"
edition = "2024"
authors = ["Adam Howard <adam.thomas.howard@gmail.com>"]
description = "Proteus Player desktop audio player"
homepage = "https://github.com/innocentsmith/proteus-player"
repository = "https://github.com/innocentsmith/proteus-player"
license-file = "LICENSE"

[features]
default = ["with-player"]
with-player = ["dep:proteus-lib"]
no-player = []
debug = ["dep:sysinfo"]

[dependencies]
anyhow = "1.0.100"
iced = { version = "0.14.0", features = ["image", "svg", "tokio"] }
muda = "0.16.0"
proteus-lib = { version = "0.7.0-alpha.4", optional = true }
# proteus-lib = { path = "../../rust/proteus/proteus-lib", version = "0.6.1", optional = true }
rfd = "0.17.2"
sysinfo = { version = "0.37.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3.2", features = ["NSData", "NSProcessInfo", "NSString"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
