[package]
name = "proteus-player"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.93"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri = { version = "1.5", features = [ "api-all", "devtools"] }
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# proteus_audio = "0.2.0"
# proteus_audio = { path = "/Users/innocentsmith/Dev/rust/proteus-cli" }
proteus-lib = { path = "/Users/innocentsmith/Dev/rust/proteus/proteus-lib" }

uuid = { version = "1.20.0", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
